Add home page with promo blocks from DB
